refactor: Update variable names in foodController and menuController
