# docs/swagger.json
@@ -40,29 +40,11 @@
                                 "$ref": "#/definitions/models.Menu"
                             }
                         }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
                     }
                 }
             }
         },
-        "/menus/{menu_id}": {
+        "/menus/{menuId}": {
             "get": {
                 "description": "Get All Menus",
                 "consumes": [
@@ -79,7 +61,7 @@
                     {
                         "type": "string",
                         "description": "Menu ID",
-                        "name": "menu_id",
+                        "name": "menuId",
                         "in": "path",
                         "required": true
                     }
