# routes/menuRouter.go
@@ -1,14 +1,14 @@
 package routes
 
 import (
-	 "gastrono-go/controllers"
+	"gastrono-go/controllers"
 	"github.com/gin-gonic/gin"
 )
 
 func MenuRoutes(incomingRoutes *gin.Engine) {
 	incomingRoutes.GET("/menus", controllers.GetMenus())
-	incomingRoutes.GET("/menus/:menu_id", controllers.GetMenu())
+	incomingRoutes.GET("/menus/:menuId", controllers.GetMenu())
 
 	incomingRoutes.POST("/menus", controllers.CreateMenu())
-	incomingRoutes.PATCH("/menus/:menu_id", controllers.UpdateMenu())
+	incomingRoutes.PATCH("/menus/:menuId", controllers.UpdateMenu())
 }
